2020-12-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/mpc.c (ReadMPCImage): 'i' should be unsigned.

	* magick/random.c (InitializeMagickRandomKernel): 'done' is not
	used in all compilation implementations.

	* magick/nt_feature.c (CropImageToHBITMAP): Dependent on HasWINGDI32.
	(ImageToHBITMAP): Dependent on HasWINGDI32.

	* coders/jp2.c: JasPer changed its jas_stream_ops_t callback
	interfaces in releases 2.0.19 and 2.0.20.  Provide the newer
	interfaces by default, but use a MAGICK_JP2_OLD_STREAM_INTERFACE
	pre-processor definition to support selecting the old interfaces.
	This mostly eliminates compilation warnings since the interfaces
	are mostly binary compatible (within the positive range of an
	integer).  In the 1.3.36 a MAGICK_JP2_NEW_STREAM_INTERFACE
	definition was supported. It is assumed that Jasper libraries
	should soon be updated to the latest version due to severe
	security defects in older releases.

	* configure.ac: The gdi32 test was faulty since both gdi32 and
	user32 libraries are required.

2020-12-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: Updates in preparation for the 1.3.36 release.

	* bootstrap: Fix config.guess and config.sub download URLs.

2020-12-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* design/pixel-cache.dot: Fix reported syntax errors.

	* coders/mpc.c (ReadMPCImage): Report correct exception reason.

	* coders/miff.c (ReadMIFFImage): Arbitrarily limit the number of
	header keywords to avoid DOS attempts.
	(ReadMIFFImage): Finish updates to use resource-limited memory
	allocator.
	(WriteMIFFImage): Finish updates to use resource-limited memory
	allocator.

	* coders/mpc.c (ReadMPCImage): Arbitrarily limit the number of
	header keywords to avoid DOS attempts.  Fixes oss-fuzz 28956
	"Timeout - coder_MPC_fuzzer".

2020-12-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (AffineEdge): Use MagickDoubleToLong();
