@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020201229"
-#define public MagickPackageReleaseDate "snapshot-20201229"
+#define public MagickPackageVersionAddendum ".020201230"
+#define public MagickPackageReleaseDate "snapshot-20201230"
